<resources>
    <string name="app_name">Gym Assistant</string>
    <string name="action_settings">Ustawienia</string>

    <string name="tab_1_name">"Profil użytkownika"</string>
    <string name="tab_2_name">"Treningi"</string>
    <string name="tab_3_name">"Historia treningów"</string>
    <string name="tab_4_name">"Atlas ćwiczeń"</string>
    <string name="age">wiek</string>
    <string name="height">wzrost</string>
    <string name="weight">waga</string>
    <string name="BMI">bmi</string>
    <string name="calf_FAB">Obwód łydki</string>
    <string name="thigh_FAB">Obwód uda</string>
    <string name="fip_FAB">Obwód bioder</string>
    <string name="waist_FAB">Obwód talii</string>
    <string name="biceps_FAB">Obwód ramienia</string>
    <string name="chest_FAB">Obwód klatki piersiowej</string>
    <string name="weight_FAB">Waga</string>
    <string name="please_insert">Proszę podać %1$s</string>
    <string name="please_insert_all_info">Proszę wypełnić wszystkie informacje</string>
    <string name="cancel">Anuluj</string>
    <string name="add_size">Dodaj pomiar</string>
    <string name="date">DATA</string>
    <string name="kilograms">kg</string>
    <string name="centimeters">cm</string>
    <string name="btn_login">ZALOGUJ</string>
    <string name="btn_link_to_register">Nie masz jeszcze konta? Zarejestruj się!</string>
    <string name="btn_register">ZAREJESTRUJ</string>
    <string name="btn_link_to_login">Masz już konto? Zaloguj się!</string>
    <string name="email_hint">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="login_hint">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="authenticating">"Uwierzytelnianie…"</string>
    <string name="registration">"Trwa rejestracja…"</string>
    <string name="valid_email">Proszę podać poprawny adres email</string>
    <string name="valid_password">Hasło powinno zawierać przynajmniej 5 znaków</string>
    <string name="login_failed">Logowanie nie powiodło się</string>
    <string name="register_failed">Rejestracja nie powiodła się</string>
    <string name="valid_username">Nazwa użytkownika powinna zaiwerać przynajmniej 3 znaki</string>
    <string name="exercise_name">NAZWA ĆWICZENIA</string>
    <string name="exercise_main_muscle">MIĘSIEŃ GŁÓWNY</string>
    <string name="exercise_aux_muscle">MIĘSIEŃ POMOCNICZY</string>
    <string name="exercise_stabilizers">STABILIZATOR</string>
    <string name="exercise_howto">WYKONANIE</string>
    <string name="exercise_attentions">UWAGI</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="favorites">Ulubione</string>
    <string name="add_to_fav">To ćwiczenie zostało dodane do ulubionych</string>
    <string name="player_error">Nie udało się uruchomić playera</string>
    <string name="youtube">youtube</string>
    <string name="empty_state">Wygląda na to, że nie masz jeszcze planu!</string>
    <string name="add_plan">UTWÓRZ NOWY PLAN</string>
    <string name="title_activity_wizard">Kreator nowego planu</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="back_button">WSTECZ</string>
    <string name="next_button">DALEJ</string>
    <string name="save_button">ZAPISZ</string>
    <string name="set_training_days">zaznacz dni treningowe</string>
    <string name="monday">poniedziałek</string>
    <string name="tuesday">wtorek</string>
    <string name="wednesday">środa</string>
    <string name="thursday">czwartek</string>
    <string name="friday">piątek</string>
    <string name="saturday">sobota</string>
    <string name="sunday">niedziela</string>
    <string name="add_exercises">dodaj ćwiczenia</string>
    <string name="choose_muscle">wybierz partię mięśni</string>
    <string name="choose_exercise">wybierz ćwiczenie</string>
    <string name="choose_series">wybierz liczbę serii</string>
    <string name="choose_repeats">wybierz liczbę powtórzeń</string>
    <string name="nonstandard_value">wartość niestandardowa</string>
    <string name="series_number">numer serii</string>
    <string name="repeats_number">powtórzeń</string>
    <string name="load">obciążenie</string>
    <string name="choose_number_training_days">liczba dni treningowych</string>
    <string name="choose_existing_plan">wybierz jeden z gotowych planów</string>
    <string name="create_new_plan">stwórz nowy plan</string>
    <string name="choose_plan">wybierz jeden z gotowych planów</string>
    <string name="set_start_date">data rozpoczęcia treningu</string>
    <string name="set_end_date">czas trwania treningu (w dniach)</string>
    <string name="day">Dzień %1$d</string>
    <string name="muscle_group">partia mięśni</string>
    <string name="exercise">ćwiczenie</string>
    <string name="series_count_x_repeats_count">liczba serii x liczba powtórzeń</string>
    <string name="summary">podsumowanie</string>
    <string name="series_x_repeats">%1$d x %2$d</string>
    <string name="save_and_close">ZAPISZ I ZAKOŃCZ</string>
    <string name="add_next_exercise">DODAJ NASTĘPNE ĆWICZENIE</string>
    <string name="choose_training_day">wybierz dzień treningowy i rozpocznij trening</string>
    <string name="training_plan_item">%1$s \n \t\t%2$s %3$s \n POWTÓRZEŃ: %4$d \n\n</string>
    <string name="male">mężczyzna</string>
    <string name="female">kobieta</string>
    <string name="repeats_with_param">powtórzeń: %1$d</string>
    <string name="choose_day">wybierz dzień</string>
    <string name="plan_name">nazwa planu</string>
    <string name="plan_description">opis planu (opcjonalnie)</string>
    <string name="choose_active_plan">wybierz plan według, którego będziesz ćwiczył</string>
    <string name="gender">płeć</string>
    <string name="birthdate">data urodzenia</string>
    <string name="name">imię</string>
    <string name="surname">nazwisko</string>
    <string name="please_give_weight">PROSZĘ PODAĆ WAGĘ</string>
    <string name="please_give_height">PROSZĘ PODAĆ WZROST</string>
    <string name="training_name">nazwa treningu</string>
    <string name="finish">zakończ</string>
    <string name="edit">edytuj</string>
    <string name="traning_description">opis treningu</string>
    <string name="traning_start_date">data rozpoczęcia treningu</string>
    <string name="expected_end_date">spodziewana data zakończenia treningu</string>
    <string name="plan_description_short">opis planu</string>
    <string name="number_of_training_days">liczba dni treningowych</string>
    <string name="activate">aktywuj</string>
    <string name="delete">usuń</string>
    <string name="please_set_traning_name">Proszę podać nazwę treningu</string>
    <string name="text_lenght">Nazwa powinna być krótsz niż 20 znaków</string>
    <string name="please_set_plan_name">Proszę podać nazwę planu</string>
    <string name="end_date">data zakończenia treningu</string>
    <string name="select_date">Wybierz datę</string>
    <string name="close">zakończ</string>
    <string name="exercise_preview">podgląd ćwiczenia</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="closing_assistant">Zamykanie asystenta</string>
    <string name="close_without_saving">Zamknąć bez zapisywania?</string>
    <string name="save_traning">Zapisać trening?</string>
    <string name="training_date">data treningu</string>
    <string name="training_time">czas trwania treningu</string>
    <string name="series">poszczególne serie</string>
    <string name="add_deleted_plans">dołącz usunięte plany</string>
    <string name="repeats">Liczba powtórzeń</string>
    <string name="which_training_day">numer dnia treningowego</string>
    <string name="fat">tłuszcz</string>
    <string name="chest">klatka piersiowa</string>
    <string name="biceps_right">ramię (prawe)</string>
    <string name="biceps_left">ramię (lewe)</string>
    <string name="waist">talia</string>
    <string name="fip">biodra</string>
    <string name="thigh_right">udo (prawe)</string>
    <string name="thigh_left">udo (lewe)</string>
    <string name="calf_right">łydka (prawa)</string>
    <string name="calf_left">łydka (lewa)</string>
    <string name="choose_dimension">wybierz wymiar</string>
    <string name="value">wartość</string>
    <string name="add_measurement">dodaj pomiar</string>
    <string name="add_new_measurement">dodaj nowy pomiar</string>
    <string name="fill_measurment">PROSZĘ PODAĆ POMIAR!</string>
    <string name="lengthUnit">długość</string>
    <string name="weightUnit">masa</string>
    <string name="user_profile">profil użytkownika</string>
    <string name="units">jednostki</string>
    <string name="pleas_give_birthday">Proszę podać datę urodzenia</string>
    <string name="fill_all">Proszę wypełnić wszystkie dane</string>
    <string name="double_with_unit">%1$f %2$s</string>
    <string name="double_two_digits">%.2f</string>
    <string name="current_training">obecny trening</string>
    <string name="last_training">poprzedni trening</string>
    <string name="save_series">zapisz ćwiczenie</string>
    <string name="click_on_exercise_to_select">kliknij na ćwiczenie aby je zaznaczyć</string>

    <string-array name="dimension_types">
        <item>@string/weight</item>
        <item>@string/fat</item>
        <item>@string/chest</item>
        <item>@string/biceps_right</item>
        <item>@string/biceps_left</item>
        <item>@string/waist</item>
        <item>@string/fip</item>
        <item>@string/thigh_right</item>
        <item>@string/thigh_left</item>
        <item>@string/calf_right</item>
        <item>@string/calf_left</item>
    </string-array>

</resources>
