<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:background="#2a2a2a"
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/cancel"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:background="@color/colorCard"
            android:layout_marginRight="1dp"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/next_button"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:background="@color/colorCard"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/set_training_days"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        style="@style/titleTextSmall" />

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:text="@string/monday"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:id="@+id/monday"
        android:layout_marginTop="15dp"
        android:textAllCaps="true"
        android:layout_below="@+id/textView7"
        android:textSize="15sp"
        android:background="@color/colorCard"/>

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:textAlignment="textStart"
        android:text="@string/tuesday"
        android:padding="10dp"
        android:id="@+id/tuesday"
        android:layout_marginTop="1dp"
        android:checked="false"
        android:textAllCaps="true"
        android:layout_below="@+id/monday"
        android:textSize="15sp"
        android:background="@color/colorCard"/>

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:textAlignment="textStart"
        android:text="@string/wednesday"
        android:padding="10dp"
        android:id="@+id/wednesday"
        android:layout_marginTop="1dp"
        android:checked="false"
        android:textAllCaps="true"
        android:layout_below="@+id/tuesday"
        android:textSize="15sp"
        android:background="@color/colorCard"/>

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:textAlignment="textStart"
        android:text="@string/thursday"
        android:padding="10dp"
        android:id="@+id/thursday"
        android:layout_marginTop="1dp"
        android:checked="false"
        android:textAllCaps="true"
        android:layout_below="@+id/wednesday"
        android:textSize="15sp"
        android:background="@color/colorCard"/>

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:textAlignment="textStart"
        android:text="@string/friday"
        android:padding="10dp"
        android:id="@+id/friday"
        android:layout_marginTop="1dp"
        android:checked="false"
        android:textAllCaps="true"
        android:layout_below="@+id/thursday"
        android:textSize="15sp"
        android:background="@color/colorCard"/>

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:textAlignment="textStart"
        android:text="@string/saturday"
        android:padding="10dp"
        android:id="@+id/saturday"
        android:layout_marginTop="1dp"
        android:checked="false"
        android:textAllCaps="true"
        android:layout_below="@+id/friday"
        android:textSize="15sp"
        android:background="@color/colorCard"/>

    <CheckBox
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorText"
        android:textAlignment="textStart"
        android:text="@string/sunday"
        android:padding="10dp"
        android:id="@+id/sunday"
        android:layout_marginTop="1dp"
        android:checked="false"
        android:textAllCaps="true"
        android:layout_below="@+id/saturday"
        android:textSize="15sp"
        android:background="@color/colorCard"/>
</RelativeLayout>