<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorCard"
        style="@style/CardView">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:src="@drawable/icon"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/age"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            style="@style/titleTextSmall"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25 lat"
            android:id="@+id/ageTextView"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:id="@+id/textView2"
            android:layout_below="@+id/ageTextView"
            android:layout_alignLeft="@+id/ageTextView"
            android:layout_alignStart="@+id/ageTextView"
            android:layout_marginTop="10dp"
            style="@style/titleTextSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="176 cm"
            android:id="@+id/heightTextView"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/textView3"
            android:layout_below="@+id/heightTextView"
            android:layout_alignLeft="@+id/heightTextView"
            android:layout_alignStart="@+id/heightTextView"
            android:layout_marginTop="10dp"
            style="@style/titleTextSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="75 kg"
            android:id="@+id/weightTextView"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMI"
            android:id="@+id/textView4"
            android:layout_below="@+id/weightTextView"
            android:layout_alignLeft="@+id/weightTextView"
            android:layout_alignStart="@+id/weightTextView"
            android:layout_marginTop="10dp"
            style="@style/titleTextSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24.2"
            android:id="@+id/bmiTextView"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout"
        android:background="#F3F3F3">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menuFAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_labels_colorNormal="@color/colorCard"
            android:layout_gravity="end|bottom">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/calfFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/calf_FAB" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/thighFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/thigh_FAB" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fipFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/fip_FAB" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/waistFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/waist_FAB" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/bicepsFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/biceps_FAB" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/chestFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/chest_FAB" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/weightFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_24dp"
                fab:fab_size="mini"
                app:fab_label="@string/weight_FAB" />

        </com.github.clans.fab.FloatingActionMenu>

    </FrameLayout>

</FrameLayout>